--- a/secondChance-backend/.env.sample
+++ b/secondChance-backend/.env.sample
@@ -1,4 +1,4 @@
-MONGO_URL=mongodb://root:password_of_mongodb_instance@localhost:27017
+MONGO_URL=mongodb+srv://hansentamaradharmawan_db_user:A2fCi8bnWWrYE12w@cluster0.qwlisoy.mongodb.net/?appName=Cluster0
 JWT_SECRET=setasecret
 
 MONGO_DB=secondChance
