--- a/secondChance-backend/util/import-mongo/.env.sample
+++ b/secondChance-backend/util/import-mongo/.env.sample
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb://root:password_of_mongodb_instance@localhost:27017
+MONGO_URL=mongodb+srv://hansentamaradharmawan_db_user:A2fCi8bnWWrYE12w@cluster0.qwlisoy.mongodb.net/?appName=Cluster0
 DATASRC=gifts.json
